# py-templatify

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml  checks.yml
src/py_templatify/: _decorators.py  _types.py
src/py_templatify/_tags/: _base.py  _markdown.py
tests/: test_types.py
